# SoFiA-image-pipeline

./: .gitignore  Dockerfile  README.md  image_pipeline.py  overview_fig.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-build-latest.yml  docker-build-release.yml
docs/: conf.py  index.rst  make.bat  modules.rst
docs/modules/: functions.rst  get_ancillary.rst  get_hst_cosmos.rst  index.rst
docs/src/: combine_images.rst  index.rst  make_images.rst  make_spectra.rst
modules/: functions.py  get_ancillary.py  get_hst_cosmos.py
src/: __init__.py  combine_images.py  download_usr_fig.py  image_pipeline.py  make_images.py  make_spectra.py  overview_fig.py
src/data/: tier1_lines_reformat.list
src/modules/: functions.py  get_ancillary.py  logger.py  make_chan_maps.py  panstarrs_fcns.py
src/sip/: combine_images.py  download_usr_fig.py  image_pipeline.py  make_images.py  make_spectra.py
src/sip/modules/: functions.py  get_ancillary.py  get_hst_cosmos.py  logger.py  make_chan_maps.py
test_data/: sofia2_ugc7012.par
tests/: README.md  test_image_pipeline.py
tests/data/: UGC7012_noise.txt  sofia2_ugc7012.par
