[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sofia-image-pipeline"
dynamic = ["version"]
description = "SIP takes a SoFiA generated source catalog and produce images for publication or quick inspection. Images include HI contours overlaid on multiwavelength images, HI moment maps, pixel-by-pixel SNR maps, pv-diagrams with SoFiA mask, and spectra with and without noise."
readme = "README.md"
authors = [
    { name = "Kelley M. Hess", email = "kmhess.astro@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License",
]
dependencies = [
    "astropy >= 5.0.2",
    "astroquery >= 0.4.7",
    "matplotlib >= 3.5.1, <3.8",
    "numpy == 1.22.0",
    "Pillow >= 10.0.1",
    "pvextractor >= 0.4",
    "requests >= 2.31.0",
    "setuptools >= 65.5.1",
    "sphinx_rtd_theme == 1.0.0",
    "xmltodict == 0.12.0",
]

[project.scripts]
download_usr_fig = "src.download_usr_fig:main"
sofia_image_pipeline = "src.image_pipeline:main"

[project.urls]
Homepage = "https://github.com/kmhess/SoFiA-image-pipeline"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
