[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "sofia-image-pipeline"
version = "1.3.26"
description = "SIP takes a SoFiA generated source catalog and produce images for publication or quick inspection. Images include HI contours overlaid on multiwavelength images, HI moment maps, pixel-by-pixel SNR maps, pv-diagrams with SoFiA mask, and spectra with and without noise."
readme = "README.md"
authors = [
    { name = "Kelley M. Hess", email = "kmhess.astro@gmail.com" },
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "astropy >= 5.0.2",
    "astroquery >= 0.4.7",
    "matplotlib >= 3.5.1",
    "numpy >= 1.22.0",
    "Pillow >= 10.0.1",
    "pvextractor >= 0.4",
    "requests >= 2.31.0",
    "sphinx_rtd_theme >= 1.0.0",
    "xmltodict >= 0.12.0",
]

[project.scripts]
download_usr_fig = "sip.download_usr_fig:main"
sofia_image_pipeline = "sip.image_pipeline:main"

[project.urls]
Homepage = "https://github.com/kmhess/SoFiA-image-pipeline"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sip" = ["data/tier1_lines_reformat.list"] 